Closed
Bug 868257
Opened 12 years ago
Closed 12 years ago
watchPosition only sends one location
Categories
(Core :: DOM: Geolocation, defect)
Core
DOM: Geolocation
Tracking
()
RESOLVED
FIXED
blocking-b2g | leo+ |
People
(Reporter: dougt, Assigned: dougt)
Details
(Whiteboard: [qa-])
Attachments
(2 files)
6.41 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
2.81 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•12 years ago
|
||
borked on b2g18 too. because no commit can come without a regression.. apparently.
blocking-b2g: --- → leo+
Assignee | ||
Comment 2•12 years ago
|
||
Assignee | ||
Comment 3•12 years ago
|
||
Updated•12 years ago
|
Attachment #744956 -
Flags: review+
Updated•12 years ago
|
Attachment #744992 -
Flags: review+
Assignee | ||
Comment 4•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/b35170667a2f
https://hg.mozilla.org/releases/mozilla-b2g18/rev/8becaf2a0bc7
Status: NEW → RESOLVED
Closed: 12 years ago
status-b2g18:
--- → fixed
status-firefox23:
--- → fixed
Resolution: --- → FIXED
![]() |
||
Updated•12 years ago
|
Flags: in-moztrap-
What are the steps to reproduce so QA can verify this in Firefox 23.0b1 candidates?
Whiteboard: [qa?]
You need to log in
before you can comment on or make changes to this bug.
Description
•