Bug 868257 - watchPosition only sends one location r=stuart